feat(search): add search based on different conditions using dynamic queres